--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,18 @@
     "require": {
         "php": "^7.2",
         "albertcht/invisible-recaptcha": "^1.9",
-        "altek/accountant": "^1.2",
+        "altek/accountant": "^2.0",
         "altek/eventually": "^1.0",
-        "arcanedev/log-viewer": "^5.0",
+        "arcanedev/log-viewer": "^7.0",
         "creativeorange/gravatar": "~1.0",
         "davejamesmiller/laravel-breadcrumbs": "^5.0",
-        "facade/ignition": "^1.11",
+        "facade/ignition": "^2.0",
         "fideloper/proxy": "^4.0",
         "lab404/laravel-impersonate": "^1.4",
         "langleyfoxall/laravel-nist-password-rules": "^4.0",
-        "laravel/framework": "^6.3",
+        "laravel/framework": "^7.0",
         "laravel/socialite": "^4.1",
+        "laravel/ui": "^2.0",
         "spatie/laravel-html": "^2.22",
         "spatie/laravel-permission": "^3.0",
         "torann/geoip": "^1.0"
@@ -30,15 +31,11 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.6",
         "codedungeon/phpunit-result-printer": "^0.26.1",
-        "facade/ignition-code-editor": "^1.0",
-        "facade/ignition-self-diagnosis": "^1.0",
-        "facade/ignition-tinker-tab": "^1.0",
         "friendsofphp/php-cs-fixer": "^2.14",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0",
-        "roave/security-advisories": "dev-master"
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
